WIP - Add more configs

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -3,8 +3,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: RobotoMonoNerdFont, Roboto, FontAwesome, Helvetica, Arial,
-    sans-serif;
+  font-family: NotoNerdFont, Helvetica, Arial, sans-serif;
   font-size: 13px;
   min-height: 0;
 }
