--- a/run_onchange_before_step-1_install-pkgs.sh.tmpl
+++ b/run_onchange_before_step-1_install-pkgs.sh.tmpl
@@ -2,5 +2,7 @@
 set -euo pipefail
 
 {{ range .packages -}}
-paru -S --noconfirm {{ . | quote }}
+if ! pacman -Qi {{ . | quote }} > /dev/null ; then
+  paru -S --noconfirm {{ . | quote }}
+fi
 {{ end -}}
