--- a/.chezmoiscripts/run_onchange_before_step-1_install-pkgs.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-1_install-pkgs.sh.tmpl
@@ -1,6 +1,8 @@
 #!/bin/bash
 set -euo pipefail
 
+echo "Installing packages..."
+
 {{ range .packages -}}
 if ! pacman -Qi {{ . | quote }} > /dev/null ; then
   paru -S --noconfirm {{ . | quote }}
