Add os based templates

--- a/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
@@ -1,6 +1,8 @@
+{{ if eq .chezmoi.os "linux" -}}
 #!/bin/bash
 set -euo pipefail
 
 echo "Changing default shell to zsh"
 
 chsh -s /usr/bin/zsh
+{{ end -}}
