--- a/.chezmoiscripts/run_once_after_step-02_nvidia-conf.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-02_nvidia-conf.sh.tmpl
@@ -1,3 +1,4 @@
+{{ if eq .chezmoi.os "linux" -}}
 #!/bin/bash
 set -euo pipefail
 
@@ -11,3 +12,4 @@ sudo mkinitcpio --config /etc/mkinitcpio.conf --generate /boot/initramfs-custom.
 
 sudo touch /etc/modprobe.d/nvidia.conf
 sudo bash -c 'echo "options nvidia-drm modeset=1" >> /etc/modprobe.d/nvidia.conf'
+{{ end -}}
