--- a/.chezmoiscripts/run_once_after_step-05_enable-services.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-05_enable-services.sh.tmpl
@@ -1,3 +1,4 @@
+{{ if eq .chezmoi.os "linux" -}}
 #!/bin/bash
 set -euo pipefail
 
@@ -5,3 +6,4 @@ echo "Enabling services"
 
 sudo systemctl enable sddm.service
 sudo systemctl enable docker.socket
+{{ end -}}
