--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -23,7 +23,9 @@ alias cat="bat"
 alias vim="nvim"
 alias gst="git status"
 alias grc="git rm -r --cached ."
+{{ if eq .chezmoi.os "linux" -}}
 alias yay="paru"
+{{ end -}}
 
 # █░█ █ █▀ ▀█▀ █▀█ █▀█ █▄█
 # █▀█ █ ▄█ ░█░ █▄█ █▀▄ ░█░
