Configure kitty themes

--- a/dot_config/kitty/private_kitty.conf.tmpl
+++ b/dot_config/kitty/private_kitty.conf.tmpl
@@ -1,4 +1,8 @@
-include rose-pine.conf
+{{ if eq .chezmoi.os "linux" -}}
+include themes/rose-pine.conf
+{{ else if eq .chezmoi.os "darwin" -}}
+include themes/argonaut.conf
+{{ end -}}
 
 # kitty +list-fonts --psnames | grep "Hack"
 font_family        Hack Nerd Font Mono
