--- a/.chezmoiscripts/run_once_after_step-04_docker-conf.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-04_docker-conf.sh.tmpl
@@ -6,5 +6,5 @@ echo "Changing docker images location"
 
 sudo mkdir -p /etc/docker
 sudo touch /etc/docker/daemon.json
-sudo cp ~/.local/share/chezmoi/.etc/docker/daemon.json /etc/docker/daemon.json
+sudo cp ~/.local/share/chezmoi/etc/docker/daemon.json /etc/docker/daemon.json
 {{ end -}}
