--- a/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
@@ -1,33 +1,47 @@
-{{ if eq .chezmoi.os "linux" -}}
+# {{ if eq .chezmoi.os "linux" -}}
+# #!/bin/bash
+# set -euo pipefail
+
+# echo "Installing packages..." <<EOF
+# {{ range .packages.linux.packages -}}
+# if ! pacman -Qi {{ . | quote }} > /dev/null ; then
+#   paru -S --needed --noconfirm {{ . | quote }}
+# fi
+# {{ end -}}
+# {{ range .packages.linux.flatpaks -}}
+# if ! flatpak info {{ . | quote }} > /dev/null ; then
+#   flatpak install -y flathub {{ . | quote }}
+# fi
+# {{ end -}}
+# EOF
+# {{ else if eq .chezmoi.os "darwin" -}}
+# #!/bin/bash
+# set -euo pipefail
+
+# echo "Installing packages..." <<EOF
+# {{ range .packages.macos.casks -}}
+# if ! brew list {{ . | quote }} > /dev/null ; then
+#   brew install --cask -q {{ . | quote }}
+# fi
+# {{ end -}}
+# {{ range .packages.macos.brews -}}
+# if ! brew list {{ . | quote }} > /dev/null ; then
+#   brew install -q {{ . | quote }}
+# fi
+# {{ end -}}
+# EOF
+# {{ end -}}
+
+{{ if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 set -euo pipefail
 
 echo "Installing packages..." <<EOF
 {{ range .packages.linux.packages -}}
-if ! pacman -Qi {{ . | quote }} > /dev/null ; then
-  paru -S --noconfirm {{ . | quote }}
-fi
+paru -S --needed --noconfirm {{ . | quote }}
 {{ end -}}
 {{ range .packages.linux.flatpaks -}}
-if ! flatpak info {{ . | quote }} > /dev/null ; then
-  flatpak install -y flathub {{ . | quote }}
-fi
-{{ end -}}
-EOF
-{{ else if eq .chezmoi.os "darwin" -}}
-#!/bin/bash
-set -euo pipefail
-
-echo "Installing packages..." <<EOF
-{{ range .packages.macos.casks -}}
-if ! brew list {{ . | quote }} > /dev/null ; then
-  brew install --cask -q {{ . | quote }}
-fi
-{{ end -}}
-{{ range .packages.macos.brews -}}
-if ! brew list {{ . | quote }} > /dev/null ; then
-  brew install -q {{ . | quote }}
-fi
+flatpak install -y flathub {{ . | quote }}
 {{ end -}}
 EOF
 {{ end -}}
