Change EOF in install script

--- a/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
@@ -2,7 +2,8 @@
 #!/bin/bash
 set -euo pipefail
 
-echo "Installing packages..." <<EOF
+echo "Installing packages..."
+EOF
 {{ range .packages.linux.packages -}}
 paru -S --needed --noconfirm {{ . | quote }}
 {{ end -}}
