--- a/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
@@ -3,7 +3,7 @@
 set -euo pipefail
 
 echo "Installing packages..."
-EOF
+<<EOF
 {{ range .packages.linux.packages -}}
 paru -S --needed --noconfirm {{ . | quote }}
 {{ end -}}
