--- a/dot_config/kitty/private_kitty.conf.tmpl
+++ b/dot_config/kitty/private_kitty.conf.tmpl
@@ -2,7 +2,7 @@
 include themes/rose-pine.conf
 {{ else if eq .chezmoi.os "darwin" -}}
 include themes/argonaut.conf
-{{ end -}}
+{{ end }}
 
 # kitty +list-fonts --psnames | grep "Hack"
 font_family        Hack Nerd Font Mono
