--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -3,7 +3,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "NotoSerif Nerd Font", Helvetica, Arial, sans-serif;
+  font-family: "NotoSans Nerd Font", Helvetica, Arial, sans-serif;
   font-size: 13px;
   min-height: 0;
 }
