--- a/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
@@ -2,7 +2,7 @@
 #!/bin/bash
 set -euo pipefail
 
-echo "Changing default shell to zsh"
+# echo "Changing default shell to zsh"
 
-chsh -s /usr/bin/zsh
+# chsh -s /usr/bin/zsh
 {{ end -}}
