--- a/.chezmoiscripts/run_once_after_step-05_enable-services.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-05_enable-services.sh.tmpl
@@ -1,9 +1,9 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/bash
-set -euo pipefail
+# set -euo pipefail
 
-echo "Enabling services"
+# echo "Enabling services"
 
-sudo systemctl enable sddm.service
-sudo systemctl enable docker.socket
+# sudo systemctl enable sddm.service
+# sudo systemctl enable docker.socket
 {{ end -}}
