--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -23,6 +23,8 @@ alias cat="bat"
 alias vim="nvim"
 alias gst="git status"
 alias grc="git rm -r --cached ."
+alias gfp="git fetch && git pull"
+alias home="chezmoi cd"
 {{ if eq .chezmoi.os "linux" -}}
 alias yay="paru"
 {{ end }}
