Test shell change script

--- a/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
@@ -2,7 +2,5 @@
 #!/bin/bash
 set -euo pipefail
 
-# echo "Changing default shell to zsh"
-
-# chsh -s /usr/bin/zsh
+sudo chsh -s /usr/bin/zsh "$USER"
 {{ end -}}
