--- a/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-01_change-shell.sh.tmpl
@@ -2,5 +2,7 @@
 #!/bin/bash
 set -euo pipefail
 
-sudo chsh -s /usr/bin/zsh "$USER"
+echo "Changing default shell to zsh"
+
+sudo chsh -s /usr/bin/zsh $USER
 {{ end -}}
