--- a/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-01_install-pkgs.sh.tmpl
@@ -5,12 +5,12 @@ set -euo pipefail
 echo "Installing packages..."
 
 {{ range .packages.linux.packages -}}
-if ! pacman -Qi {{ . | quote }} > /dev/null ; then
+if ! pacman -Qi {{ . | quote }} &>/dev/null ; then
   paru -S --noconfirm {{ . | quote }}
 fi
 {{ end -}}
 {{ range .packages.linux.flatpaks -}}
-if ! flatpak info {{ . | quote }} > /dev/null ; then
+if ! flatpak info {{ . | quote }} &>/dev/null ; then
   flatpak install -y flathub {{ . | quote }}
 fi
 {{ end -}}
@@ -21,12 +21,12 @@ set -euo pipefail
 echo "Installing packages..."
 
 {{ range .packages.macos.casks -}}
-if ! brew list {{ . | quote }} > /dev/null ; then
+if ! brew list {{ . | quote }} &>/dev/null ; then
   brew install --cask -q {{ . | quote }}
 fi
 {{ end -}}
 {{ range .packages.macos.brews -}}
-if ! brew list {{ . | quote }} > /dev/null ; then
+if ! brew list {{ . | quote }} &>/dev/null ; then
   brew install -q {{ . | quote }}
 fi
 {{ end -}}
