--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -24,8 +24,12 @@ alias vim="nvim"
 alias gst="git status"
 alias grc="git rm -r --cached ."
 alias gfp="git fetch && git pull"
-alias home="chezmoi cd ~"
-alias cmu="chezmoi update"
+alias .cd="chezmoi cd ~"
+alias .apply="chezmoi apply"
+alias .update="chezmoi update"
+alias .add="chezmoi add"
+alias .readd="chezmoi re-add"
+alias sourcez="source ~/.zshrc"
 {{ if eq .chezmoi.os "linux" -}}
 alias yay="paru"
 {{ end }}
