Add more aliases

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -29,6 +29,10 @@ alias .apply="chezmoi apply"
 alias .update="chezmoi update"
 alias .add="chezmoi add"
 alias .readd="chezmoi re-add"
+alias .edit="chezmoi edit --apply"
+alias .vim="chezmoi edit --apply"
+alias .merge="chezmoi merge"
+alias .diff="chezmoi diff"
 alias sourcez="source ~/.zshrc"
 {{ if eq .chezmoi.os "linux" -}}
 alias yay="paru"
