Rename install script

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -33,6 +33,7 @@ alias .edit="chezmoi edit --apply"
 alias .vim="chezmoi edit --apply"
 alias .merge="chezmoi merge"
 alias .diff="chezmoi diff"
+alias .managed="chezmoi managed"
 alias sourcez="source ~/.zshrc"
 {{ if eq .chezmoi.os "linux" -}}
 alias yay="paru"
