--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -44,6 +44,7 @@ alias .vim="chezmoi edit --apply"
 alias .merge="chezmoi merge"
 alias .diff="chezmoi diff"
 alias .managed="chezmoi managed"
+alias .verify="chezmoi verify"
 
 # Source .zshrc
 alias sourcez="source ~/.zshrc"
