--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -131,3 +131,5 @@ export PATH="$BUN_INSTALL/bin:$PATH"
 source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 {{ end -}}
+
+source ~/.local/bin/greet.sh
