--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -50,7 +50,7 @@ alias .verify="chezmoi verify"
 alias sourcez="source ~/.zshrc"
 
 
-{{ if eq .chezmoi.os "linux" -}}
+{{- if eq .chezmoi.os "linux" -}}
 # AUR
 alias yay="paru"
 {{ end }}
@@ -130,4 +130,4 @@ export PATH="$BUN_INSTALL/bin:$PATH"
 {{ if eq .chezmoi.os "linux" -}}
 source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
-
+{{ end -}}
