--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -71,6 +71,15 @@ window#waybar.empty #window {
   border-radius: 4px;
 }
 
+#network {
+  background-color: @surface;
+  padding: 0.25em 0.75em;
+  margin: 0.5em 0;
+  margin-right: 0.5em;
+  border-radius: 4px;
+  color: @text;
+}
+
 #wireplumber {
   background-color: @surface;
   padding: 0.25em 0.75em;
