--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -49,11 +49,13 @@ alias .verify="chezmoi verify"
 # Source .zshrc
 alias sourcez="source ~/.zshrc"
 
-
 {{- if eq .chezmoi.os "linux" -}}
 # AUR
 alias yay="paru"
 {{ end }}
+
+# Scripts directory
+export SCRIPTS="~/.local/bin"
 
 # █░█ █ █▀ ▀█▀ █▀█ █▀█ █▄█
 # █▀█ █ ▄█ ░█░ █▄█ █▀▄ ░█░
