--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -49,7 +49,6 @@ alias .verify="chezmoi verify"
 # Source .zshrc
 alias sourcez="source ~/.zshrc"
 
-
 {{ if eq .chezmoi.os "linux" -}}
 # AUR
 alias yay="paru"
@@ -115,7 +114,7 @@ source /usr/share/nvm/init-nvm.sh
 export NVM_DIR="$HOME/.nvm"
   [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"  # This loads nvm
   [ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm"  # This loads nvm bash_completion
-{{ end }}
+{{ end -}}
 
 # █▄▄ █░█ █▄░█
 # █▄█ █▄█ █░▀█
@@ -123,7 +122,7 @@ export NVM_DIR="$HOME/.nvm"
 [ -s "/home/astherae/.bun/_bun" ] && source "/home/astherae/.bun/_bun"
 {{ else if eq .chezmoi.os "darwin" -}}
 [ -s "/Users/joaoinez/.bun/_bun" ] && source "/Users/joaoinez/.bun/_bun"
-{{ end }}
+{{ end -}}
 
 export BUN_INSTALL="$HOME/.bun"
 export PATH="$BUN_INSTALL/bin:$PATH"
