--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -55,7 +55,7 @@ alias yay="paru"
 {{ end -}}
 
 # Scripts directory
-export SCRIPT_WALLPAPER="~/.local/bin/resize_images_in_dir_to_wallpaper.sh"
+alias wallpaper="~/.local/bin/resize_images_in_dir_to_wallpaper.sh"
 
 # █░█ █ █▀ ▀█▀ █▀█ █▀█ █▄█
 # █▀█ █ ▄█ ░█░ █▄█ █▀▄ ░█░
