--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -54,8 +54,8 @@ alias sourcez="source ~/.zshrc"
 alias yay="paru"
 {{ end -}}
 
-# Scripts directory
-alias wallpaper="~/.local/bin/resize_images_in_dir_to_wallpaper.sh"
+# Wallpaper resize script
+alias wallpaper="sh ~/.local/bin/resize_images_in_dir_to_wallpaper.sh"
 
 # █░█ █ █▀ ▀█▀ █▀█ █▀█ █▄█
 # █▀█ █ ▄█ ░█░ █▄█ █▀▄ ░█░
