--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -133,3 +133,5 @@ export PATH="$BUN_INSTALL/bin:$PATH"
 source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 {{ end -}}
+
+export WALLPAPER="0"
