Remove .chezmoi.toml Update .zshrc

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -45,6 +45,7 @@ alias .merge="chezmoi merge"
 alias .diff="chezmoi diff"
 alias .managed="chezmoi managed"
 alias .verify="chezmoi verify"
+alias .push="sh ~/.local/bin/push_dotfiles.sh"
 
 # Source .zshrc
 alias sourcez="source ~/.zshrc"
