--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -46,7 +46,7 @@ tooltip label {
   background-color: @surface;
   padding: 0.25em 0.75em;
   margin: 0.5em 0;
-  margin-right: 0.5em;
+  margin-left: 0.5em;
   border-radius: 4px;
 }
 
