--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -36,6 +36,7 @@ alias gfp="git fetch && git pull"
 # Chezmoi
 alias .cd="chezmoi cd ~"
 alias .apply="chezmoi apply"
+alias .init="chezmoi init"
 alias .update="chezmoi update"
 alias .add="chezmoi add"
 alias .readd="chezmoi re-add"
