--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -51,6 +51,13 @@ tooltip label {
   color: @pine;
 }
 
+#custom-divider {
+  padding: 0.25em 0.75em;
+  padding-right: 0;
+  margin: 0.5em 0;
+  margin-left: 0.5em;
+}
+
 #window {
   padding: 0.25em 0.75em;
   margin: 0.5em 0;
