--- a/.chezmoiscripts/run_onchange_before_step-00_install-brews.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-00_install-brews.sh.tmpl
@@ -2,11 +2,13 @@
 #!/bin/bash
 set -euo pipefail
 
+echo "Installing brews and casks"
+
 brew bundle --no-lock --file=/dev/stdin <<EOF
-{{ range .packages.darwin.brews -}}
+{{ range .macos.brews -}}
 brew {{ . | quote }}
 {{ end -}}
-{{ range .packages.darwin.casks -}}
+{{ range .macos.casks -}}
 cask {{ . | quote }}
 {{ end -}}
 EOF
