--- a/.chezmoiscripts/run_once_after_step-03_sddm-theme.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-03_sddm-theme.sh.tmpl
@@ -1,10 +1,10 @@
-{{ if eq .chezmoi.os "linux" -}}
-#!/bin/bash
-set -euo pipefail
+# {{ if eq .chezmoi.os "linux" -}}
+# #!/bin/bash
+# set -euo pipefail
 
-echo "Applying sddm theme"
+# echo "Applying sddm theme"
 
-sudo mkdir -p /etc/sddm.conf.d
-sudo touch /etc/sddm.conf.d/theme.conf
-sudo cp ~/.local/share/chezmoi/etc/sddm.conf.d/theme.conf /etc/sddm.conf.d/theme.conf
-{{ end -}}
+# sudo mkdir -p /etc/sddm.conf.d
+# sudo touch /etc/sddm.conf.d/theme.conf
+# sudo cp ~/.local/share/chezmoi/etc/sddm.conf.d/theme.conf /etc/sddm.conf.d/theme.conf
+# {{ end -}}
