--- a/.chezmoiscripts/run_once_after_step-04_docker-conf.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-04_docker-conf.sh.tmpl
@@ -1,10 +1,10 @@
-# {{ if eq .chezmoi.os "linux" -}}
-# #!/bin/bash
-# set -euo pipefail
+{{ if eq .chezmoi.os "linux" -}}
+#!/bin/bash
+set -euo pipefail
 
 # echo "Changing docker images location"
 
 # sudo mkdir -p /etc/docker
 # sudo touch /etc/docker/daemon.json
 # sudo cp ~/.local/share/chezmoi/etc/docker/daemon.json /etc/docker/daemon.json
-# {{ end -}}
+{{ end -}}
