--- a/.chezmoiscripts/run_once_after_step-05_enable-services.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-05_enable-services.sh.tmpl
@@ -2,8 +2,8 @@
 #!/bin/bash
 set -euo pipefail
 
-# echo "Enabling services"
+echo "Enabling services"
 
-# sudo systemctl enable sddm.service
-# sudo systemctl enable docker.socket
+sudo systemctl enable sddm.service &>/dev/null
+sudo systemctl enable docker.socket &>/dev/null
 {{ end -}}
