--- a/.chezmoiscripts/run_once_after_step-06_pacman-colors.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-06_pacman-colors.sh.tmpl
@@ -2,7 +2,7 @@
 #!/bin/bash
 set -euo pipefail
 
-# echo "Enabling pacman colors"
+echo "Enabling pacman colors"
 
-# sudo sed -i 's/#Color/Color/' /etc/pacman.conf
+sudo sed -i 's/#Color/Color/' /etc/pacman.conf
 {{ end -}}
