--- a/.chezmoiscripts/run_once_after_step-09_projects-dir.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-09_projects-dir.sh.tmpl
@@ -2,8 +2,6 @@
 #!/bin/bash
 set -euo pipefail
 
-echo "Installation completed."
-{{ if eq .chezmoi.os "linux" -}}
-echo "You may now reboot."
-{{ end -}}
+mkdir -p ~/Projects/Personal
+mkdir -p ~/Projects/Work
 {{ end -}}
