--- a/.chezmoiscripts/run_once_after_step-10_clone-neovim.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-10_clone-neovim.sh.tmpl
@@ -2,8 +2,5 @@
 #!/bin/bash
 set -euo pipefail
 
-echo "Installation completed."
-{{ if eq .chezmoi.os "linux" -}}
-echo "You may now reboot."
-{{ end -}}
+git clone https://github.com/joaoinez/kickstart.nvim.git "${XDG_CONFIG_HOME:-$HOME/.config}"/nvim
 {{ end -}}
