--- a/.chezmoiscripts/run_once_after_step-07_install-node.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-07_install-node.sh.tmpl
@@ -2,8 +2,7 @@
 #!/bin/bash
 set -euo pipefail
 
-echo "Installation completed."
-{{ if eq .chezmoi.os "linux" -}}
-echo "You may now reboot."
-{{ end -}}
+echo "Installing node"
+
+zsh -c 'source ~/.zshrc && nvm install node' &>/dev/null
 {{ end -}}
