--- a/.chezmoiscripts/run_once_after_step-08_install-bun.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-08_install-bun.sh.tmpl
@@ -2,8 +2,7 @@
 #!/bin/bash
 set -euo pipefail
 
-echo "Installation completed."
-{{ if eq .chezmoi.os "linux" -}}
-echo "You may now reboot."
-{{ end -}}
+echo "Installing bun"
+
+curl -fsSL https://bun.sh/install | bash &>/dev/null
 {{ end -}}
