--- a/.chezmoiscripts/run_once_after_step-10_clone-neovim.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-10_clone-neovim.sh.tmpl
@@ -2,5 +2,8 @@
 #!/bin/bash
 set -euo pipefail
 
-git clone https://github.com/joaoinez/kickstart.nvim.git "${XDG_CONFIG_HOME:-$HOME/.config}"/nvim
+if [ ! -d "${XDG_CONFIG_HOME:-$HOME/.config}" ]; then
+	git clone https://github.com/joaoinez/kickstart.nvim.git "${XDG_CONFIG_HOME:-$HOME/.config}"/nvim
+fi
+
 {{ end -}}
