--- a/.chezmoiscripts/run_onchange_before_step-00_install-exes.ps1.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-00_install-exes.ps1.tmpl
@@ -1,8 +1,8 @@
 {{ if eq .chezmoi.os "windows" -}}
 {{ range .windows.apps -}}
-winget install --id={{ . | quote }}
+winget install --id {{ . | quote }}
 {{ end -}}
-{{ range .windows.chocos -}}
-choco install {{ . | quote }} -y
-{{ end -}}
+# {{ range .windows.chocos -}}
+# choco install {{ . | quote }} -y
+# {{ end -}}
 {{ end -}}
