--- a/.chezmoiscripts/run_onchange_before_step-00_install-exes.ps1.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-00_install-exes.ps1.tmpl
@@ -2,6 +2,9 @@
 {{ range .windows.apps -}}
 winget install --id {{ . | quote }}
 {{ end -}}
+{{ range .windows.sudos -}}
+gsudo winget install --id {{ . | quote }}
+{{ end -}}
 # {{ range .windows.chocos -}}
 # choco install {{ . | quote }} -y
 # {{ end -}}
