--- a/.chezmoiscripts/run_onchange_before_step-00_install-exes.ps1.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-00_install-exes.ps1.tmpl
@@ -1,5 +1,5 @@
 {{ if eq .chezmoi.os "windows" -}}
 {{ range .windows.apps -}}
-winget install --id {{ . | quote }}
+winget install --id {{ . | quote }} --ignore-security-hash
 {{ end -}}
 {{ end -}}
