--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -46,10 +46,8 @@ alias .diff="chezmoi diff"
 alias .managed="chezmoi managed"
 alias .verify="chezmoi verify"
 alias .push="sh ~/.local/bin/push_dotfiles.sh"
-
 # Source .zshrc
 alias sourcez="source ~/.zshrc"
-
 {{ if eq .chezmoi.os "linux" -}}
 # AUR
 alias yay="paru"
@@ -125,4 +123,7 @@ export PATH="$BUN_INSTALL/bin:$PATH"
 {{ if eq .chezmoi.os "linux" -}}
 source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
+{{ else if eq .chezmoi.os "darwin" -}}
+source /opt/homebrew/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+source /opt/homebrew/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 {{ end -}}
