--- a/.chezmoiscripts/run_once_after_step-08_install-node.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-08_install-node.sh.tmpl
@@ -2,7 +2,9 @@
 #!/bin/bash
 set -euo pipefail
 
+if [[ $(zsh -c "source ~/.zshrc && nvm version") == "none" ]]; then
 echo "Installing node"
 
 zsh -c 'source ~/.zshrc && nvm install node' &>/dev/null
+fi
 {{ end -}}
