--- a/.chezmoiscripts/run_once_after_step-09_install-bun.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-09_install-bun.sh.tmpl
@@ -2,7 +2,9 @@
 #!/bin/bash
 set -euo pipefail
 
+if ! command -v bun &>/dev/null; then
 echo "Installing bun"
 
 curl -fsSL https://bun.sh/install | bash &>/dev/null
+fi
 {{ end -}}
