--- a/.chezmoiscripts/run_onchange_before_step-00_install-brews.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_step-00_install-brews.sh.tmpl
@@ -4,6 +4,9 @@ set -euo pipefail
 
 echo "Installing brews and casks"
 
+{{ range .macos.taps -}}
+brew tap {{ . | quote }}
+{{ end -}}
 brew bundle --no-lock --file=/dev/stdin <<EOF
 {{ range .macos.brews -}}
 brew {{ . | quote }}
