--- a/dot_config/kitty/private_kitty.conf.tmpl
+++ b/dot_config/kitty/private_kitty.conf.tmpl
@@ -2,14 +2,18 @@
 include themes/rose-pine.conf
 {{ else if eq .chezmoi.os "darwin" -}}
 include themes/argonaut.conf
-{{ end }}
+{{- end }}
 
 # kitty +list-fonts --psnames | grep "Hack"
 font_family        Hack Nerd Font Mono
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
+{{ if eq .chezmoi.os "linux" -}}
 font_size          10.0
+{{ else if eq .chezmoi.os "darwin" -}}
+font_size          12.0
+{{ end -}}
 
 background_opacity 0.8
 background_blur    10
