--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -101,6 +101,8 @@ zstyle :compinstall filename '${HOME}/.zshrc'
 autoload -Uz compinit
 compinit
 
+eval "$(fzf --zsh)"
+
 # █▀ ▀█▀ ▄▀█ █▀█ █▀ █░█ █ █▀█
 # ▄█ ░█░ █▀█ █▀▄ ▄█ █▀█ █ █▀▀
 eval "$(starship init zsh)"
