--- a/.chezmoiscripts/run_once_after_step-14_clone-obsidian.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-14_clone-obsidian.sh.tmpl
@@ -3,6 +3,8 @@
 set -euo pipefail
 
 if [ ! -d ~/emerald ]; then
+	echo "Cloning obsidian vault"
+
 	git clone https://github.com/joaoinez/emerald.git ~/emerald
 fi
 {{ end -}}
