--- a/.chezmoiscripts/run_once_after_step-11_clone-neovim.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-11_clone-neovim.sh.tmpl
@@ -3,6 +3,8 @@
 set -euo pipefail
 
 if [ ! -d ~/.config/nvim ]; then
+	echo "Cloning neovim config"
+
 	git clone https://github.com/joaoinez/kickstart.nvim.git ~/.config/nvim
 fi
 {{ end -}}
