--- a/.chezmoiscripts/run_once_after_step-15_clone-tpm.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-15_clone-tpm.sh.tmpl
@@ -2,8 +2,8 @@
 #!/bin/bash
 set -euo pipefail
 
-if [ ! ~/.tmux/plugins/tpm ]; then
-	echo "Cloning TPM"
+if [ ! -d ~/.tmux/plugins/tpm ]; then
+  echo "Cloning TPM"
 
   git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 fi
