--- a/dot_config/kitty/private_kitty.conf.tmpl
+++ b/dot_config/kitty/private_kitty.conf.tmpl
@@ -1,5 +1,6 @@
 {{ if eq .chezmoi.os "linux" -}}
 include themes/rose-pine.conf
+cursor                #ff0017
 {{ else if eq .chezmoi.os "darwin" -}}
 include themes/argonaut.conf
 {{- end }}
