--- a/dot_config/kitty/private_kitty.conf.tmpl
+++ b/dot_config/kitty/private_kitty.conf.tmpl
@@ -14,6 +14,7 @@ bold_italic_font   auto
 font_size          10.0
 {{ else if eq .chezmoi.os "darwin" -}}
 font_size          12.0
+macos_option_as_alt left
 {{ end -}}
 
 background_opacity 0.82
