--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -65,7 +65,7 @@ tooltip label {
 }
 
 window#waybar.empty #window {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 #clock {
@@ -74,6 +74,14 @@ window#waybar.empty #window {
   margin: 0.5em 0;
   border-radius: 9999px;
   color: @gold;
+}
+
+#custom-updates {
+  background-color: @surface;
+  padding: 0.25em 0.75em;
+  margin: 0.5em 0;
+  margin-right: 0.5em;
+  border-radius: 4px;
 }
 
 #tray {
