--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -6,6 +6,7 @@
   font-family: "NotoSans Nerd Font", Helvetica, Arial, sans-serif;
   font-size: 13px;
   min-height: 0;
+  background: transparent;
 }
 
 window#waybar {
@@ -21,6 +22,7 @@ tooltip {
 
 tooltip label {
   color: @text;
+  padding: 0.25em 0.5em;
 }
 
 #custom-os {
