--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -70,12 +70,21 @@ window#waybar.empty #window {
   background-color: transparent;
 }
 
-#clock-weather {
+#clock {
   background-color: @surface;
   padding: 0.25em 1em;
   margin: 0.5em 0;
   border-radius: 9999px;
   color: @gold;
+}
+
+#custom-weather {
+  background-color: @surface;
+  padding: 0.25em 1em;
+  margin: 0.5em 0;
+  margin-left: 0.5em;
+  border-radius: 9999px;
+  color: @foam;
 }
 
 #tray {
