--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -109,6 +109,7 @@ alias sourcez="source ~/.zshrc"
 {{- if eq .chezmoi.os "linux" }}
 # AUR
 alias yay="paru"
+alias clearcache="paru -Sccd"
 {{- end }}
 
 # █▀▀ █░█ ▄▀█ █░░
