--- a/.chezmoiscripts/run_once_after_step-06_enable-services.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-06_enable-services.sh.tmpl
@@ -5,5 +5,5 @@ set -euo pipefail
 echo "Enabling services"
 
 sudo systemctl enable sddm.service &>/dev/null
-sudo systemctl enable docker.socket &>/dev/null
+# sudo systemctl enable docker.socket &>/dev/null
 {{ end -}}
