--- a/.chezmoiscripts/run_once_after_step-05_docker-conf.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_step-05_docker-conf.sh.tmpl
@@ -2,9 +2,9 @@
 #!/bin/bash
 set -euo pipefail
 
-echo "Changing docker images location"
-
-sudo mkdir -p /etc/docker
-sudo touch /etc/docker/daemon.json
-sudo cp ~/.local/share/chezmoi/etc/docker/daemon.json /etc/docker/daemon.json
+# echo "Changing docker images location"
+#
+# sudo mkdir -p /etc/docker
+# sudo touch /etc/docker/daemon.json
+# sudo cp ~/.local/share/chezmoi/etc/docker/daemon.json /etc/docker/daemon.json
 {{ end -}}
