--- a/dot_config/wlogout/style.css
+++ b/dot_config/wlogout/style.css
@@ -4,7 +4,8 @@ window {
 
 button {
   color: #e0def4;
-  background-color: #31748f;
+  background-color: transparent;
+  /* background-color: #31748f; */
   outline-style: none;
   border: none;
   border-width: 0px;
@@ -18,13 +19,13 @@ button {
 }
 
 button:focus {
-  background-color: #c4a7e7;
-  background-size: 25%;
+  /* background-color: #c4a7e7; */
+  background-size: 10%;
 }
 
 button:hover {
-  background-color: #eb6f92;
-  background-size: 30%;
+  /* background-color: #eb6f92; */
+  background-size: 15%;
   animation: gradient_f 20s ease-in infinite;
   transition: all 0.3s cubic-bezier(0.55, 0, 0.28, 1.682);
 }
