--- a/dot_config/swaync/style.css
+++ b/dot_config/swaync/style.css
@@ -20,7 +20,7 @@
 
 * {
   all: unset;
-  font-family: FiraCode Nerd Font;
+  font-family: NotoSans Nerd Font;
   transition: 0.3s;
   font-size: 1.2rem;
 }
