--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -50,7 +50,7 @@ tooltip label {
 }
 
 #workspaces button.active {
-  color: @pine;
+  color: @foam;
 }
 
 #custom-divider {
@@ -58,12 +58,14 @@ tooltip label {
   padding-right: 0;
   margin: 0.5em 0;
   margin-left: 0.5em;
+  color: @foam;
 }
 
 #window {
   padding: 0.25em 0.75em;
   margin: 0.5em 0;
   margin-left: 0.5em;
+  color: @foam;
 }
 
 window#waybar.empty #window {
